--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 		<p class="blog_time">Updated in:2019-07-06  </p>
 	</div>
 	<div class="blog_div">
-		<a href="" class="blog_title">I can do this all day!</a>
+		<a href="ExpIIBlog.html" class="blog_title">基础实验2——谈JavaScript中的class继承</a>
 		<p>
-			When you realize that what you see is only a movie line, it means that this blog is still in the making.
+			浅谈JavaScript中class继承方法的基本原理，并反思实验2中自己出现的错误及其解决方案。
 		</p>
+		<p class="blog_time">Updated in:2019-07-11  </p>
 	</div>
 	<div class="blog_div">
 		<a href="" class="blog_title">Part of the journey is the end.</a>
@@ -37,6 +38,8 @@
 	</div>
 	<div class="recent_contents">
 		<p class="title">Recent Blogs</p>
+		<a href="ExpIIBlog.html" style="color: black">基础实验2——谈JavaScript中的class继承</a>
+		<p class="blog_time">2019-07-11</p>
 		<a href="MyFirstBlog.html" style="color: black">第一篇日志：关于Web前端</a>
 		<p class="blog_time">2019-07-06</p>
 	</div>
